# lazylog

./: Cargo.toml  LICENSE  README.md  TIMELINE_VIEW_PLAN.md  build.rs  codebook.toml  default.nix  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
examples/: config.toml  filters.toml
scripts/: generate_journal.sh  generate_journal_logs.sh  remote_journal.sh
src/: app.rs  cli.rs  colors.rs  command.rs  completion.rs  config.rs  debug_log.rs  display_options.rs  event.rs  event_mark_view.rs  expansion.rs  file_manager.rs  filter.rs  help.rs  highlighter.rs  history.rs  keybindings.rs  lib.rs  list_view_state.rs  live_processor.rs  log.rs  log_event.rs  log_processor.rs  logging.rs  main.rs  marking.rs  matcher.rs  options.rs  persistence.rs  processing.rs  resolver.rs  search.rs  time_filter.rs  timeline.rs  timestamp.rs  ui.rs  utils.rs  version.rs  viewport.rs
src/ui/: colors.rs  explorer.rs  footer.rs  lists.rs  log_view.rs  logview.rs  mod.rs  popups.rs  scrollable_list.rs
test/: journal.sh
tests/: perf.rs
