[package]
name = "lazylog"
version = "0.1.1"
description = "Log Viewer"
authors = ["Kasper Nyhus <kanyhus@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.47", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.11.3"
toml = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
