[package]
name = "lazylog"
version = "0.1.15"
description = "Log Viewer"
authors = ["Kasper Nyhus <kanyhus@gmail.com>"]
license = "MIT"
edition = "2024"
build = "build.rs"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
ratatui-explorer = "0.3.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.47", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-error = "0.2"
regex = "1.11.3"
toml = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
rayon = "1.10"
num-format = "0.4.4"
arboard = { version = "3.4.1" }
tui-input = { version = "0.15.0", default-features = false, features = [
    "ratatui-crossterm",
] }
chrono = "0.4"
shadow-rs = "1.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }

[build-dependencies]
shadow-rs = "1.5.0"

[profile.release]
strip = true
